History file for ack 3.  https://beyondgrep.com/

NEXT
========================================
[FIXES]
Reworked the option parsing to run correctly with Getopt::Long 2.38.

[FEATURES]
Added support for the Elm language. (GH#316)

Added support for the Purescript language. (GH#317)


v3.4.0      Mon Jun 29 23:04:18 CDT 2020
========================================
[FEATURES]
When calling "ack -c" to get a list of filenames and counts, the filename
would not be colored like when getting normal search results.  Now it will.
Thanks to Matthew Hughes for adding the feature, and Ophir Lifshitz for the
suggestion. (GH#282)

Added --toml for the TOML filetype. (GH#306)

[FIXES]
The test t/ack-x.t would fail when run as root. Now it is skipped. Thanks,
Michael LaGrasta. (GH#217)


v3.3.1      Mon Jan 13 10:27:16 CST 2020
========================================
[FIXES]
Some regexes would be shown as invalid when used with the -Q option.  Since
the -Q tells ack to treat the regex as a literal, this shouldn't be
possible.  (GH#294)


v3.3.0      Sat Dec 28 16:00:21 CST 2019
========================================
[FEATURES]
The error message ack displays when the regex passed is invalid has been
improved.  The message is more readable and includes a pointer to the
offending part of the regex.  For example:

    $ ack 'status: (open|closed|in progress'
    ack: Invalid regex 'status: (open|closed|in progress'
    Regex: status: (open|closed|in progress
                   ^---HERE Unmatched ( in regex

Added many new file and directory exclusions to speed up file selection.
* Python's *.pyc, *.pyd and *.pyo compiled files
* Python's __pycache__ and .pytest_cache directories
* Linux *.so shared object files
* Windows dynamic-link library *.dll files
* gettext compiled *.mo translation files
* macOS's __MACOSX directories and .DS_Store files

Reorganized the --help menu to put "action" options like -f, -g and -l at
the top of the listing.
