@@ -10,6 +10,8 @@ Added support for the Elm language. (GH#316)
 
 Added support for the Purescript language. (GH#317)
 
+Added support for the Bazel build tool. (GH#327)
+
 
 v3.4.0      Mon Jun 29 23:04:18 CDT 2020
 ========================================
